Update app, styles, content, and data files

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <section id="team" class="tab-section" data-section>
       <div class="section-header">
-        <h2>Your team dashboard</h2>
+        <h2>Your Team</h2>
         <p>Upload a team sheet to see shared strengths and communication guidance.</p>
       </div>
       <div id="teamGate"></div>
